--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add public/data/beaches.geojson public/data/summary.json
+          git add docs/data/beaches.geojson docs/data/summary.json
           git diff --cached --quiet && echo "No data changes" && exit 0
           git commit -m "data: hourly update"
           git push
